Applications/HomeAssistant/components/_homeassistant/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    #reloader.stakater.com/auto: 'true' # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'false' # Enables search mode (only reloads if matching secrets/configMaps are found)
    #configmap.reloader.stakater.com/auto: 'true' # Reloads only when referenced ConfigMap(s) change
    #configmap.reloader.stakater.com/reload: '' # Reloads when specific ConfigMap(s) change, regardless of how they're used
    #secret.reloader.stakater.com/auto: 'true' # Reloads only when referenced Secret(s) change
    #secret.reloader.stakater.com/reload: '' # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout' # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  serviceName: homeassistant
  selector:
    matchLabels:
      app.kubernetes.io/component: 'application'
  replicas: 0
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Retain
    whenDeleted: Retain
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'
      annotations:
        k8s.v1.cni.cncf.io/networks: homeassistant/homeassistant
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      securityContext:
        fsGroup: 1000
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
            privileged: false
          resources:
            requests:
              cpu: 1
              memory: 1024Mi
            limits:
              cpu: 2
              memory: 2048Mi
          ports:
            - containerPort: 8123
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config
  volumeClaimTemplates:
    - metadata:
        name: homeassistant-config
        labels:
          app.kubernetes.io/component: 'homeassistant'
      spec:
        accessModes:
          - ReadWriteMany
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 0Gi
