Applications/HomeAssistant/components/_homeassistant/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/component: 'application'
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      name: http
  type: ClusterIP
